--- a/week2/style2.css
+++ b/week2/style2.css
@@ -1,7 +1,7 @@
 body{
     background-image: url('file:///C:/Users/koki/Desktop/Homework2/images/background.png');
     font-size: 1.2em;
-    font-family: 'Lemonada', cursive;
+    font-family: 'Rakkas', cursive;
   }
 
 
