--- a/week2/style.css
+++ b/week2/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/images/background.png');
+    background-image: url('./images/background.png');
     font-size: 1.2em;
     font-family: 'Rakkas', cursive;
 }
