--- a/week2/style.css
+++ b/week2/style.css
@@ -135,22 +135,22 @@ p {
 /* tablet */
 @media screen and (min-width: 479px) and (max-width: 767px) {
     #grid-flex .grid-item:nth-child(n) {
-        flex-basis: calc(100% * (1/3) - 42px);
+        flex-basis: calc(100% * (1/3) - 4px - 6%);
     }
     #grid-flex .grid-item:nth-child(1) {
-        flex-basis: calc(100% * (1/2) - 42px);
+        flex-basis: calc(100% * (1/2) - 4px - 6%);
     }
     #grid-flex .grid-item:nth-child(2) {
-        flex-basis: calc(100% * (1/2) - 42px);
+        flex-basis: calc(100% * (1/2) - 4px - 6%);
     }
 }
 
 /* phone */
 @media screen and (max-width:479px) {
     #grid-flex .grid-item:nth-child(n) {
-        flex-basis: calc(100% * (1/2) - 42px);
+        flex-basis: calc(100% * (1/2) - 4px - 6%);
     }
     #grid-flex .grid-item:first-child {
-        flex-basis: calc(100% - 42px);
+        flex-basis: calc(100% - 4px - 6%);
     }
 }
