--- a/week3/style.css
+++ b/week3/style.css
@@ -56,7 +56,7 @@
     }
 
     .flex-item1:nth-child(1) {
-        background-image: url("./img/1.jpg");
+        background-image: url("img/1.jpg");
         /*flex-grow: 2;*/
         background-size: cover;
         background-position: center;
@@ -69,7 +69,7 @@
     }
 
     .flex-item1:nth-child(6) {
-        background-image: url("./img/6.jpg");
+        background-image: url("img/6.jpg");
         /*flex-grow: 2;*/
         background-size: cover;
         background-position: center;
@@ -219,7 +219,7 @@
     }
 
     .first-section {
-        background-image: url('./img/0.jpg');
+        background-image: url("img/0.jpg");
         width: 100%;
         height: 430px;
         background-size: cover;
